Replace blank hostname and blank log message to prevent Graylog error #82